Fixed navbar overlap issue

--- a/templates/assets/css/bootstrap.css
+++ b/templates/assets/css/bootstrap.css
@@ -11,6 +11,9 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
+    padding-top: 105px;
+}
+body {
   margin: 0;
 }
 article,
